fix: rewrite unit test in recommendation-service