@@ -1,11 +1,9 @@
-package com.mrs.recommendation_service.module.recommendation.domain.use_case;
+package com.mrs.recommendation_service.module.recommendation.application.use_case;
 
-import com.mrs.recommendation_service.module.book_feature.domain.model.Genre;
 import com.mrs.recommendation_service.module.book_feature.domain.port.BookFeatureRepository;
-import com.mrs.recommendation_service.module.book_feature.domain.port.CatalogClient;
-import com.mrs.recommendation_service.module.recommendation.application.use_case.GetRecommendationsUseCase;
 import com.mrs.recommendation_service.module.recommendation.application.command.GetRecommendationsCommand;
 import com.mrs.recommendation_service.module.recommendation.domain.model.Recommendation;
+import com.mrs.recommendation_service.module.recommendation.domain.port.RecommendationRepository;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -13,7 +11,6 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.time.Instant;
 import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
@@ -28,7 +25,7 @@ class GetRecommendationsUseCaseTest {
     private BookFeatureRepository bookFeatureRepository;
 
     @Mock
-    private CatalogClient client;
+    private RecommendationRepository recommendationRepository;
 
     @InjectMocks
     private GetRecommendationsUseCase getRecommendationsUseCase;
@@ -39,22 +36,21 @@ class GetRecommendationsUseCaseTest {
         // Arrange
         UUID userId = UUID.randomUUID();
         GetRecommendationsCommand command = new GetRecommendationsCommand(userId, 10, 0);
-
         List<UUID> userBookIds = List.of(UUID.randomUUID(), UUID.randomUUID());
-        Recommendation recommendation = new Recommendation(UUID.randomUUID(), "Book Title", "Description",
-                2020, "http://cover.jpg", List.of(Genre.FANTASY), Instant.now(), Instant.now());
+        Recommendation recommendation = createRecommendation("User Discovery");
 
         when(bookFeatureRepository.findAllByUserId(userId, 10, 0)).thenReturn(userBookIds);
-        when(client.fetchRecommendationsBatch(userBookIds)).thenReturn(List.of(recommendation));
+        when(recommendationRepository.findAllById(userBookIds)).thenReturn(List.of(recommendation));
 
         // Act
         List<Recommendation> result = getRecommendationsUseCase.execute(command);
 
         // Assert
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).title()).isEqualTo("Book Title");
-        verify(bookFeatureRepository, times(1)).findAllByUserId(userId, 10, 0);
-        verify(client, times(1)).fetchRecommendationsBatch(userBookIds);
+        assertThat(result.getFirst().getTitle()).isEqualTo("User Discovery");
+
+        verify(bookFeatureRepository).findAllByUserId(userId, 10, 0);
+        verify(recommendationRepository).findAllById(userBookIds);
         verify(bookFeatureRepository, never()).findMostPopularMedias(anyInt(), anyInt());
     }
 
@@ -64,23 +60,19 @@ class GetRecommendationsUseCaseTest {
         // Arrange
         UUID userId = UUID.randomUUID();
         GetRecommendationsCommand command = new GetRecommendationsCommand(userId, 5, 0);
-
         List<UUID> popularBookIds = List.of(UUID.randomUUID());
-        Recommendation recommendation = new Recommendation(UUID.randomUUID(), "Popular Book", "Description",
-                2019, "http://popular.jpg", List.of(Genre.ROMANCE), Instant.now(), Instant.now());
+        Recommendation popularRec = createRecommendation("Popular Choice");
 
         when(bookFeatureRepository.findAllByUserId(userId, 5, 0)).thenReturn(Collections.emptyList());
         when(bookFeatureRepository.findMostPopularMedias(5, 0)).thenReturn(popularBookIds);
-        when(client.fetchRecommendationsBatch(popularBookIds)).thenReturn(List.of(recommendation));
+        when(recommendationRepository.findAllById(popularBookIds)).thenReturn(List.of(popularRec));
 
         // Act
         List<Recommendation> result = getRecommendationsUseCase.execute(command);
 
         // Assert
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).title()).isEqualTo("Popular Book");
-        verify(bookFeatureRepository, times(1)).findMostPopularMedias(5, 0);
-        verify(client, times(1)).fetchRecommendationsBatch(popularBookIds);
+        assertThat(result).containsExactly(popularRec);
+        verify(bookFeatureRepository).findMostPopularMedias(5, 0);
     }
 
     @Test
@@ -89,18 +81,29 @@ class GetRecommendationsUseCaseTest {
         // Arrange
         UUID userId = UUID.randomUUID();
         GetRecommendationsCommand command = new GetRecommendationsCommand(userId, 5, 0);
-
         List<UUID> popularBookIds = List.of(UUID.randomUUID());
 
         when(bookFeatureRepository.findAllByUserId(userId, 5, 0)).thenReturn(null);
         when(bookFeatureRepository.findMostPopularMedias(5, 0)).thenReturn(popularBookIds);
-        when(client.fetchRecommendationsBatch(popularBookIds)).thenReturn(Collections.emptyList());
+        when(recommendationRepository.findAllById(popularBookIds)).thenReturn(Collections.emptyList());
 
         // Act
         List<Recommendation> result = getRecommendationsUseCase.execute(command);
 
         // Assert
         assertThat(result).isEmpty();
-        verify(bookFeatureRepository, times(1)).findMostPopularMedias(5, 0);
+        verify(bookFeatureRepository).findMostPopularMedias(5, 0);
+    }
+
+    private Recommendation createRecommendation(String title) {
+        return new Recommendation(
+                UUID.randomUUID(),
+                title,
+                "Description",
+                2024,
+                "http://image.url",
+                "Author",
+                Collections.emptyList()
+        );
     }
 }
